@@ -1,22 +1,19 @@
 import java.util.List;
 import java.util.stream.Stream;
-import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
+
+// https://belief-driven-design.com/functional-programming-with-java-exception-handling-e69997c11d3/
 
 public class PickShareFunctional {
 	public static final int MIN_PRICE = 500;
 	
 	public static ShareInfo findHighPriced(Stream<String> shares) {
-		List<ShareInfo> shareInfo = shares.map(share -> {
-											try {
-												TimeUnit.SECONDS.sleep(12);
-											} catch (InterruptedException e) {
-												// TODO Auto-generated catch block
-												e.printStackTrace();
-											}
-											return new ShareInfo((String) share, APIFinance.getPrice((String) share));})
-										.filter(share -> share.price.intValue() > MIN_PRICE)
-										.sorted((share1, share2) -> share2.price.compareTo(share1.price))
-										.toList();
+		List<ShareInfo> shareInfo = shares.map(share -> new ShareInfo((String) share, APIFinance.getPrice((String) share)))
+										.filter(share -> share.price.isPresent())
+										.filter(share -> share.price.get().intValue() > MIN_PRICE)
+										.sorted((share1, share2) -> share2.price.get().compareTo(share1.price.get()))
+										.collect(Collectors.toList());
+										// .toList();
 		return shareInfo.get(0);
 	}
 }
